[gd_scene load_steps=10 format=3 uid="uid://qgtiu5jjbbmm"]

[ext_resource type="Script" path="res://customer/customer.gd" id="1_10ghj"]
[ext_resource type="Texture2D" uid="uid://dpf6x78cwxglo" path="res://customer/customer.png" id="2_7wgps"]
[ext_resource type="StyleBox" uid="uid://bc5ak5257d3yn" path="res://customer/want_bubble.tres" id="3_e4ae5"]
[ext_resource type="Theme" uid="uid://p27wel55s5yk" path="res://text_theme.tres" id="4_abu36"]
[ext_resource type="Texture2D" uid="uid://dce0nvmb3f6id" path="res://chocolate/chocolate.png" id="5_e7m6o"]
[ext_resource type="Texture2D" uid="uid://pkvpw8pw8ytg" path="res://level/face_lose.png" id="6_j6xjk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_foabd"]
bg_color = Color(0.521141, 0.521141, 0.52114, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q2lac"]
bg_color = Color(0.25098, 0, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vmd3l"]
radius = 77.02
height = 250.0

[node name="Customer" type="StaticBody2D" groups=["customer"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_10ghj")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_7wgps")

[node name="WantBubble" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -173.29
offset_top = -237.555
offset_right = -51.29
offset_bottom = -132.555
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_e4ae5")

[node name="VBoxContainer" type="VBoxContainer" parent="WantBubble"]
layout_mode = 2

[node name="Label" type="Label" parent="WantBubble/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_abu36")
theme_override_font_sizes/font_size = 30
text = "I want:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="WantBubble/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ItemImg" type="TextureRect" parent="WantBubble/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("5_e7m6o")
expand_mode = 1

[node name="ItemCount" type="Label" parent="WantBubble/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_abu36")
theme_override_font_sizes/font_size = 20
text = "x1"

[node name="HBoxContainer2" type="HBoxContainer" parent="WantBubble/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="TextureRect" type="TextureRect" parent="WantBubble/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
texture = ExtResource("6_j6xjk")
expand_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="WantBubble/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(60, 5)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_foabd")
theme_override_styles/fill = SubResource("StyleBoxFlat_q2lac")
value = 56.59
show_percentage = false

[node name="HappinessTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_vmd3l")

[connection signal="timeout" from="HappinessTimer" to="." method="_on_happiness_timer_timeout"]
